fix: raised z-index of progress-overlay

--- a/app/components/progress/progress.styl
+++ b/app/components/progress/progress.styl
@@ -8,7 +8,7 @@
         left 0
         background-color $color-grey-dark
         opacity .3
-        z-index 10
+        z-index 100
         width 100%
         height 100%
 
@@ -19,7 +19,7 @@
         left calc((100vw - 400px) / 2)
         width 400px
         padding 25px
-        z-index 11
+        z-index 110
         border-top 3px solid $color-red
 
         h4
